--- a/src/dk/netconn/smawebbox/resources/config.properties
+++ b/src/dk/netconn/smawebbox/resources/config.properties
@@ -1,10 +1,10 @@
 #Properties file for WebBoxTools
-debug=false
-endpoint=192.168.0.168
+debug=true
+endpoint=192.168.0.19
 version=1.0
 proc=GetPlantOverview
 id=1
-rpcport=80
+rpcport=8000
 format=JSON
 password=0000
 params=
